--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -7,6 +7,43 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="8*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="12*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="14*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="title" Grid.Column="1" Grid.ColumnSpan="4" Margin="184,26,29,27" Width="NaN" Height="NaN" Text="Tiddlywinks World Cup" FontSize="36" RenderTransformOrigin="0.503,0.589"/>
+        <ListBox x:Name="teamList" Grid.Column="1" Grid.Row="2" Grid.RowSpan="2"/>
+        <ListBox x:Name="playerList" Grid.Column="3" Grid.Row="2" Grid.RowSpan="2"/>
+        <TextBlock x:Name="teamTitle" Margin="37,18,106,9" Grid.Row="1" Text="Teams" FontSize="16" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="playerTitle" Margin="0,18,118,1" Grid.Row="1" Text="Players" FontSize="16" Grid.Column="3"/>
+        <TextBlock x:Name="ratingTitle" Margin="0,18,23,1" Grid.Row="1" Text="Player Rating" FontSize="16" Grid.Column="5"/>
+        <TextBlock x:Name="recordTitle" Margin="0,39,23,66" Grid.Row="3" Text="Record Result" FontSize="16" Grid.Column="5"/>
+        <Grid Grid.Column="5" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Image x:Name="star1" Source="Images/staroutline.png"/>
+            <Image x:Name="star2" Source="Images/staroutline.png" Grid.Column="1"/>
+            <Image x:Name="star3" Source="Images/staroutline.png" Grid.Column="2"/>
+        </Grid>
+        <StackPanel Grid.Column="5" Grid.Row="3" Grid.RowSpan="2" Margin="0,67,0,0" HorizontalAlignment="Left">
+            <Button Content="Win" Height="20" Width="75" Margin="5"/>
+            <Button Content="Loss" Height="20" Width="75" Margin="5"/>
+            <Button Content="Draw" Height="20" Width="75" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Window>
