--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -41,9 +41,9 @@
             <Image x:Name="star3" Source="Images/staroutline.png" Grid.Column="2"/>
         </Grid>
         <StackPanel Grid.Column="5" Grid.Row="3" Grid.RowSpan="2" Margin="0,67,0,0" HorizontalAlignment="Left">
-            <Button Content="Win" Height="20" Width="75" Margin="5"/>
-            <Button Content="Loss" Height="20" Width="75" Margin="5"/>
-            <Button Content="Draw" Height="20" Width="75" Margin="5"/>
+            <Button x:Name="win" Content="Win" Height="20" Width="75" Margin="5"/>
+            <Button x:Name="loss" Content="Loss" Height="20" Width="75" Margin="5"/>
+            <Button x:Name="draw" Content="Draw" Height="20" Width="75" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
